test_case/rust-lang_rust/12262_35172501_1.rs
 rust
macro_rules! foo { ($e: expr) => { 'x: loop { $e } } }

fn main() {
    foo!(break 'x); //~ ERROR use of undeclared label `x`
}
